--- a/pizzeria_style.css
+++ b/pizzeria_style.css
@@ -1,13 +1,21 @@
-:root{
-    box-sizing: border-box;
-    color: white;
-  }
-  *, ::before, ::after {
-    box-sizing: inherit;
-  }
-  body {
-    background-image: url(https://cdn.pixabay.com/photo/2017/04/05/01/20/wood-2203740_1280.jpg);
-  }
+@import url('https://fonts.googleapis.com/css?family=Cookie');
+
+:root {
+  box-sizing: border-box;
+  color: white;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+body {
+  background-image: url(https://cdn.pixabay.com/photo/2017/04/05/01/20/wood-2203740_1280.jpg);
+  font-family: sans-serif;
+}
+
 /*
 tło strony - deski https://cdn.pixabay.com/photo/2017/04/05/01/20/wood-2203740_1280.jpg
 
@@ -17,57 +25,67 @@ header logo 20% width, margin-left, img 60px https://cdn.pixabay.com/photo/2012/
 
 header menu width 60%, lista wycentrowana, elementy liniowe  z padding od lewej, linki 1.4rem,
 linki menu hover kolor: #FFD77F, normalnie białe
-*/  
+*/
 #header {
   background: black;
   padding: 5px;
   font-family: 'Cookie', cursive;
-} 
+}
+
 #logo {
   float: left;
-  width: 20% ;
+  width: 20%;
 }
+
 #logo img {
   width: 60px;
   margin-left: 10px;
 }
-.menu{
+
+.menu {
   float: left;
-  width: 60% ;
+  width: 60%;
   text-align: center;
 }
+
 .menu ul li {
   display: inline-block;
   padding-right: 20px;
 }
+
 .menu ul li a {
   color: white;
-  font-size: 1.4rem ;
+  font-size: 1.4rem;
+  text-decoration: none;
 }
-.menu ul li a:hover{
+
+.menu ul li a:hover {
   color: #FFD77F;
 }
-.contact-info{
+
+.contact-info {
   float: left;
   width: 20%;
 }
-  .contact-info .tel{
-    font-size: 1.2rem;
-    max-width: 25px auto 0px;
 
-  
+.contact-info .tel {
+  font-size: 1.2rem;
+  margin: 25px auto 0;
 }
-.clearfix::after{
+
+.clearfix::after {
   content: "";
   display: block;
   clear: both;
 
 }
+
 .slider-box {
   height: 200px;
   background-color: black;
 
 }
+
 .slider-half-item {
   width: 50%;
   float: left;
@@ -75,40 +93,49 @@ linki menu hover kolor: #FFD77F, normalnie białe
   font-family: cursive, Geneva;
   padding: 10px;
 }
+
 .slider-half-item article {
   margin: 2rem;
 }
+
 .slider-half-item article .button-section {
-  margin-top: 1 rem;
+  margin-top: 1rem;
 
 }
+
 .slider-half-item .button {
   text-transform: uppercase;
   padding: 8px;
   text-decoration: none;
   margin: 2px;
-  font-size: 0.7rem; ;
+  font-size: 0.7rem;
 }
+
 .order-button {
   color: #7FD7FF;
   border: 2px solid #7FD7FF;
 
 }
+
 .book-button {
   color: #FFD77F;
   border: 2px solid #FFD77F;
   background-color: #936c02;
 }
-.order-button:hover, .book-button:hover {
+
+.order-button:hover,
+.book-button:hover {
   background-color: #333333;
 
 }
+
 .pizza-img {
   background-image: url("https://cdn.pixabay.com/photo/2017/12/09/08/18/pizza-3007395_1280.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
 }
+
 .advantages-box {
   background-color: transparent;
 }
@@ -119,6 +146,7 @@ linki menu hover kolor: #FFD77F, normalnie białe
   padding: 20px;
   margin: 30px 0px 30px;
 }
+
 .column-advantage {
   position: relative;
   height: 160px;
@@ -129,26 +157,33 @@ linki menu hover kolor: #FFD77F, normalnie białe
   background-position: center center;
   background-size: cover;
   font-family: cursive, Geneva;
+  padding: 10px;
 }
+
 .best-ingredients {
   background-image: url(https://cdn.pixabay.com/photo/2016/05/24/13/29/olive-oil-1412361__340.jpg);
 
 }
+
 .orginal-recipe {
   background-image: url(https://cdn.pixabay.com/photo/2016/05/06/12/15/cook-1375788_960_720.jpg);
 
 }
+
 .fast-delivery {
   background-image: url(https://cdn.pixabay.com/photo/2020/02/10/18/31/motor-scooter-4837310_960_720.jpg);
 }
+
 .bottom-right {
   position: absolute;
   right: 10px;
   bottom: 10px;
 }
-.kitchen-menu{
+
+.kitchen-menu {
   background-color: black;
 }
+
 .menu-one-forth {
   width: 25%;
   float: left;
@@ -157,14 +192,37 @@ linki menu hover kolor: #FFD77F, normalnie białe
   text-align: center;
   font-size: 0.9rem;
 }
+
 .menu-one-forth img {
   width: 100%;
 }
+
 .page-footer {
-  width: 100%;
   background-color: black;
   font-family: Cookie, cursive;
+  padding: 20px;
+  text-align: center;
+}
 
+.page-footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.page-footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.page-footer ul li a {
+  color: white;
+  font-size: 1.4rem;
+  text-decoration: none;
+}
+
+.page-footer ul li a:hover {
+  color: #FFD77F;
 }
 
 /*
@@ -185,7 +243,3 @@ oryginalne receptury tło https://cdn.pixabay.com/photo/2016/05/06/12/15/cook-13
 szybka dostawa tło https://cdn.pixabay.com/photo/2020/02/10/18/31/motor-scooter-4837310_960_720.jpg
 alternatywnie https://cdn.pixabay.com/photo/2017/10/15/01/00/prague-2852349_960_720.jpg
 */
-
-
-
-
